--- a/Landing/index.html
+++ b/Landing/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <div class="section1">
+        <div class="section1 " id="section1">
             <div class="logo"><img src="public/logo/logo.svg" alt="logo"></div>
             <div class="content">
                 <div class="info">
@@ -34,15 +34,17 @@
                 <div class="info">
                     <div class="title">Ponte a prueba</div>
                     <div class="paragraph">
-                        <div class="text">Evalúa tu <span> de inglés</span> y mejora tus habilidades de una forma
+                        <div class="text">Evalúa tu <span> nivel de inglés</span> y mejora tus habilidades de una forma
                             divertida.</div>
                         <div class="text">Es rápido, no tiene costo y <span> practicas el idioma.</span> </div>
                     </div>
 
-                    <div class="button">
-                        Realiza la trivia
-                        <div class="edgeb"></div>
-                    </div>
+                    <a href="#section1">
+                        <div class="button">
+                            Realiza la trivia
+                            <div class="edgeb"></div>
+                        </div>
+                    </a>
                 </div>
                 <div class="girl"><img src="public/images/yellow-girl.png" alt="girl"></div>
             </div>
@@ -63,13 +65,16 @@
                         </div>
                         <div class="card">
                             <div class="number">3</div>
-                            <div class="textd">Responde las preguntas y conoce los <span>resultados al instante</span></div>
+                            <div class="textd">Responde las preguntas y conoce los <span>resultados al instante</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="button">
-                        Realiza la trivia
-                        <div class="edgeb"></div>
-                    </div>
+                    <a href="#section1">
+                        <div class="button">
+                            Realiza la trivia
+                            <div class="edgeb"></div>
+                        </div>
+                    </a>
                 </div>
                 <div class="girl2"><img src="public/images/girltwo.png" alt="girl2"></div>
             </div>
@@ -93,6 +98,8 @@
                 </div>
             </div>
         </div>
+
+        <script src="scroll.js"></script>
     </body>
 
     </html>
